--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.30)
+cmake_minimum_required(VERSION 3.26)
 
 # NOTE : It works on my windows environment, do not knwo whether it also works on other platform
 set (project_name ImguiIntegrate)
@@ -35,7 +35,7 @@ target_link_libraries(${project_name} PRIVATE SDL2::SDL2)
 
 # find opengllib and link to to it
 find_package(OpenGL REQUIRED)
-target_link_libraries(${project_name} PRIVATE ${OPENGL_gl_LIBRARY})
+target_link_libraries(${project_name} PRIVATE ${OPENGL_LIBRARIES})
 message("opengl lib ${OPENGL_gl_LIBRARY}")
 
 
