--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -5,14 +5,18 @@ set (project_name ImguiIntegrate)
 project(ImguiIntegrate)
 
 # official doc suggest that we should compile imgui's source code with ourown projects 
-# rather than make imgui a libarary
+# rather than make imgui a library
 set (imgui_src_path "./3rdParts/imgui/source")
 set (imgui_inc_path "./3rdParts/imgui/include")
+# imnode source and include
+set (imnode_src_path "./3rdParts/imnode/source")
+set (imnode_inc_path "./3rdParts/imnode/include")
 # our own project's sources and includes
 set (our_own_src_path "./ourown/source")
 set (our_own_inc_path "./ourown/include")
 
 aux_source_directory(${imgui_src_path} project_srcfiles)
+aux_source_directory(${imnode_src_path} project_srcfiles)
 aux_source_directory(${our_own_src_path} project_srcfiles)
 
 # we need sdl2 lib, include subdirectory
@@ -23,7 +27,7 @@ add_executable(${project_name} ${project_srcfiles})
 # use cpp20standard
 target_compile_features(${project_name} PUBLIC cxx_std_20)
 # include directories
-target_include_directories(${project_name} PRIVATE ${imgui_inc_path} ${our_own_inc_path})
+target_include_directories(${project_name} PRIVATE ${imgui_inc_path} ${our_own_inc_path} ${imnode_inc_path})
 
 if(TARGET SDL2::SDL2main)
     # It has an implicit dependency on SDL2 functions, so it MUST be added before SDL2::SDL2 (or SDL2::SDL2-static)
