--- a/imgui.ini
+++ b/imgui.ini
@@ -10,3 +10,11 @@ Size=550,680
 Pos=60,60
 Size=339,180
 
+[Window][output color]
+Pos=60,60
+Size=32,35
+
+[Window][color node editor]
+Pos=60,60
+Size=874,752
+
